# snapcastXfcePlugin

./: CMakeLists.txt  library.c  library.h  readme.md  snapcastXfcePlugin.desktop
